# basira-app

./: .gitignore  GANs.ipynb  app.txt  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: connect.rs  main.rs  utils.rs
src-tauri/src/controllers/auth/: get_user_query.rs  get_users_query.rs  mod.rs  signin_query.rs  signout_query.rs  signup_query.rs  update_user_query.rs  update_user_status_query.rs
src-tauri/src/controllers/medical_record/: create_record_query.rs  get_record_query.rs  mod.rs  update_record_query.rs
src-tauri/src/controllers/payment/: create_payment_item_query.rs  create_payment_query.rs  create_products_payment.rs  delete_payment_item_query.rs  delete_payment_query.rs  get_filtered_payments_query.rs  get_payment_items_query.rs  get_payments_count_query.rs  get_payments_query.rs  get_rebound_payments_query.rs  mod.rs  update_payment_query.rs
src-tauri/src/controllers/product/: create_product_query.rs  delete_product_query.rs  get_product_query.rs  mod.rs  update_product_query.rs  update_products_quantity_query.rs
src-tauri/src/controllers/salary/: create_salary_query.rs  get_salary_query.rs  mod.rs
src-tauri/src/controllers/statics/: create_or_update_sales_query.rs  last_month_payments_query.rs  last_month_total_query.rs  last_month_visits_count_query.rs  mod.rs  (+3 more)
src-tauri/src/structs/: auth.rs  medical_record.rs  mod.rs  payment.rs  product.rs  salary.rs  statics.rs  visit.rs  visit_image.rs  visitor.rs
(+116 files in other folders)
